--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="title_activity_frm_luu_tru">frmLuuTru</string>
     <string name="title_activity_frm_tab_host">frmTabHost</string>
     <string name="title_checkbox_preference">Hồ sơ cá nhân</string>
-    <string name="title_activity_profile">Profile</string>
+    <string name="title_activity_profile">Thông tin tài khoản</string>
     <string name="title_activity_frm_ghi_chu">Ghi chú</string>
 
     <string name="frmGhiChu_edtNote"><font size="9dp">Viết ghi chú ở đây.(Có thể bỏ trống)</font></string>
