view post detail

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,5 @@
     <string name="frmGhiChu_edtNote"><font size="9dp">Viết ghi chú ở đây.(Có thể bỏ trống)</font></string>
     <string name="title_activity_frm_ghi_chu_post">frmGhiChuPost</string>
     <string name="title_activity_load_post_adapter">LoadPostAdapter</string>
-    <string name="title_activity_frm_chi_tiet_post">frmChiTietPost</string>
+    <string name="title_activity_frm_chi_tiet_post">Thông tin chi tiết</string>
 </resources>
