--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,8 @@
     <string name="title_activity_frm_luu_tru">Lưu trữ</string>
     <string name="title_activity_frm_tab_host">frmTabHost</string>
     <string name="title_checkbox_preference">Hồ sơ cá nhân</string>
-    <string name="title_activity_profile">Thông tin tài khoản</string>
+    <string name="title_activity_profile">Chỉnh sửa hồ sơ</string>
+    <string name ="title_profile1">Hồ sơ cá nhân</string>
     <string name="title_activity_frm_ghi_chu">Ghi chú</string>
 
     <string name="frmGhiChu_edtNote"><font size="9dp">Viết ghi chú ở đây.(Có thể bỏ trống)</font></string>
@@ -40,4 +41,7 @@
     <string name="title_activity_item_menu_left_apdapter">ItemMenuLeftApdapter</string>
     <string name="title_activity_frm_provider_bao_hong">frmProviderBaoHong</string>
     <string name="title_activity_provider_bao_hong">ProviderBaoHong</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
