--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">IT_Support</string>
-
+    <string name="app_name1">RequestFocus_Dynamic</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_frm_dk__dn">frmDK_DN</string>
