--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="TitlePopUp">IT Support</string>
     <string name="ValuePopUpOther">Nhập loại thiết bị cần báo hỏng</string>
     <string name="title_activity_detail_pick_post">Thông tin chi tiết</string>
+    <string name="title_chiduong">Chỉ dẫn đường đi</string>
     <!--DetailPost-->
     <string name="AcceptPost">Chấp nhận báo hỏng</string>
 </resources>
